# plcbundle-rs

./: .cargo-release.toml  .cursorrules  .dockerignore  .gitignore  BUNDLE_FORMAT_SUMMARY.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  RULES.md  SYNC_FINAL.md  bundleq-go  docker-compose.yml
.tangled/workflows/: build.yml
.trae/documents/: Restrict Public API to BundleManager.md
bindings/go/: .gitignore  README.md  callback.c  callback.h  export_bridge.c  go.mod  plcbundle.go  plcbundle.h
bindings/go/cmd/example/: main.go
docs/: API.md  BUNDLE_FORMAT.md  LOGGING.md  README.md  REFACTORING.md  profiling.md  specification.md
src/: bundle_format.rs  cache.rs  constants.rs  did_index.rs  ffi.rs  format.rs  handle_resolver.rs  index.rs  iterators.rs  lib.rs  main.rs  manager.rs  mempool.rs  operations.rs  options.rs  plc_client.rs  processor.rs  query.rs  remote.rs  resolver.rs  runtime.rs  server.rs  sync.rs  verification.rs
src/cli/: cmd_bench.rs  cmd_clean.rs  cmd_clone.rs  cmd_compare.rs  cmd_completions.rs  cmd_did.rs  cmd_diff.rs  cmd_export.rs  cmd_index.rs  cmd_init.rs  cmd_inspect.rs  cmd_ls.rs  cmd_mempool.rs  cmd_migrate.rs  cmd_op.rs  cmd_query.rs  cmd_random.rs  cmd_rebuild.rs  cmd_rollback.rs  cmd_server.rs  cmd_stats.rs  cmd_status.rs  cmd_sync.rs  cmd_verify.rs  logger.rs  mod.rs  progress.rs  utils.rs
src/server/: config.rs  error.rs  handle_bundle.rs  handle_debug.rs  handle_did.rs  handle_random.rs  handle_root.rs  handle_status.rs  handlers.rs  mod.rs  routes.rs  startup.rs  utils.rs  websocket.rs
src/server/handlers/: bundle.rs  debug.rs  mod.rs  status.rs
tests/: manager.rs  server.rs
tests/common/: mod.rs
