[package]
name = "plcbundle"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-performance PLC bundle query library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/plcbundle-rs"

[[bin]]
name = "plcbundle-rs"
path = "src/bin/plcbundle-rs.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.5"
jmespath = { version = "0.4", features = ["sync"] }
zstd = "0.13"
rayon = "1.10"
blake3 = "1.5"
memmap2 = "0.9"
chrono = "0.4"
fnv = "1.0"

# Async HTTP client for PLC sync
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
httpdate = "1.0"

# Optional CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
sha2 = "0.10.9"

# Server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["cli"]
cli = ["clap", "indicatif", "log", "env_logger"]
server = ["axum", "tower", "tower-http", "tokio-tungstenite", "tokio-util", "futures"]
