[package]
name = "plcbundle"
version = "0.9.0-alpha.0"
edition = "2024"
authors = ["Tree <tree@tree.fail>"]
description = "DID PLC Bundle Management Tool"
license = "MIT OR Apache-2.0"
repository = "https://tangled.org/atscan.net/plcbundle-rs"

[[bin]]
name = "plcbundle-rs"
path = "src/cli/mod.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.5"
jmespath = { version = "0.4", features = ["sync"] }
zstd = { version = "0.13", features = ["zstdmt"] }
rayon = "1.10"
blake3 = "1.5"
memmap2 = "0.9"
chrono = "0.4"
fnv = "1.0"

# Async HTTP client for PLC sync
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.40", features = ["full"] }
httpdate = "1.0"

# Optional CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
dialoguer = { version = "0.12", optional = true }
crossterm = { version = "0.29", optional = true }
colored = { version = "2.1", optional = true }
colored_json = { version = "5.0", optional = true }
is-terminal = { version = "0.2", optional = true }
sha2 = "0.10.9"
regex = "1.11"
atproto-plc = "0.2.0"

       # Server dependencies
       axum = { version = "0.8", features = ["ws"], optional = true }
       tower = { version = "0.5", optional = true }
       tower-http = { version = "0.6", features = ["cors"], optional = true }
       tokio-tungstenite = { version = "0.28", optional = true }
       tokio-util = { version = "0.7", features = ["io"], optional = true }
       futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["cli"]
cli = ["clap", "indicatif", "log", "env_logger", "dialoguer", "crossterm", "colored", "colored_json", "is-terminal"]
server = ["axum", "tower", "tower-http", "tokio-tungstenite", "tokio-util", "futures-util", "crossterm"]
